--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>在线预览</title>
 </head>
+<style>
+  *{
+    margin: 0;
+    padding:0;
+  }
+  div{
+    font-size: 24px;
+    text-align: center;
+    padding-top: 200px;
+  }
+</style>
 <body>
-  
+  <div>在线预览</div>
 </body>
 </html>
